static/spa/src/Main.css
/* Design tokens: https://atlassian.design/components/tokens/all-tokens */

body {
  background-color: initial;
  margin: 20px;
  width: calc(100% - 40px);
}

.clickable {
  cursor: pointer;
}

.center {
  margin-left: auto;
  margin-right: auto;
}

.no-break {
  white-space: nowrap;
}

span.button-link {
  cursor: pointer !important;
}

span.button-link:hover {
  color: var(--ds-link);
  text-decoration: underline;
}

.clip-text-300 {
  /* This is used to clip text to a maximum of 200 pixels */
  max-width: 800px !important;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.important-message {
  font-weight: bold;
}

.success-message {
  color: var(--ds-text-success);
}

div.warning-banner {
  margin-top: 8px;
  margin-bottom: 8px;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
  padding: 6px;
  border-radius: 6px;
  text-align: center;
  background-color: var(--ds-background-danger-bold);
  color: var(--ds-text-inverse);
}

div.edit-options-panel {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  justify-content:left;
  align-items: flex-start;
}

div.edit-options-panel > div.edit-options {
  flex-grow: 1;
  min-width: 100px;
}

div.edit-options-panel > div.edit-value {
  flex-grow: 100;
}

div.bulk-move-main-panel {
  margin-top: 20px;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
  grid-column-gap: 6px;
  grid-row-gap: 6px;
  justify-content: space-between;
  align-items: flex-start;
  align-items: stretch;
  /* height: fit-content; */
  /* overflow-y: auto;; */
}

div.bulk-move-main-panel > div {
  margin-bottom: 20px;
  padding: 10px;
}

div.bulk-move-main-panel > div > div {
  height: fit-content;
}

div.panel-header {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  align-items: stretch;
}

div.step-panel-content-container {
  margin: 20px 0px 10px 0px;
}

div.filter-panel {
  min-width: 300px;
}

div.padding-panel {
  padding: 10px;
  margin: 0px 5px;
  border-radius: 6px;
  border: 1px solid var(--ds-border-input);
}

div.padding-panel:hover {
  border: 1px solid var(--ds-border-focused);
}

div.content-panel {
  overflow-x: hidden;
  min-width: 300px;
}

div.data-table-container {
  width: 100%;
  display: block;
  min-height: 300px;
  max-height: 500px;
  overflow: auto;
}

table.data-table {
  width: 100%;
  /* display: block; */
}

/* table.data-table > thead {
  display: table;
  width: 100%;
} */

/* table.data-table > thead > tr {
  position: sticky;
  top: 0;
} */

table.data-table > tbody {
  /* display: block; */
  /* width: 100%; */
  /* overflow: auto; */
  /* min-height: 300px; */
  /* max-height: 500px; */
  border-bottom-width: 0px;
}

/* table.issue-selection-table > tbody {
  display: block;
} */

div.issue-selection-panel {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.issue-selection-panel > div {
  margin-left: 10px;
}

.issue-selection-panel > div:first-child {
  margin-left: 0px;
}

.issue-summary-panel {
  max-width: calc(300px - 50px);
  overflow-x: hidden;
  white-space: nowrap;
}

.inline-error-message {
  color: var(--ds-text-danger);
  font-weight: bold;
}

.disabled-text {
  color: var(--ds-text-disabled)
}

.debug-panel {
  margin-top: 30px
}

div.fake-button {
  float: right;
  width: 50px;
  padding: 0px;
  cursor: pointer;
  border-radius: 4px;
}

table.field-mapping-table {
  width: 100%;
  border-collapse: collapse;
}

table.field-mapping-table > thead > tr > th,
table.field-mapping-table > tbody > tr > td {
  padding-left: 0px;
  padding-right: 0px;
}

table.field-edit-table {
  width: 100%;
  border-collapse: collapse;
}

table.field-edit-table > thead > tr > th {
  padding: 2px;
}

table.field-edit-table > thead > tr > th > div {
  border-width: 0.1px;
}

table.field-edit-table > tbody > tr > td {
  padding: 2px;
}

